<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/welcome_logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:foregroundGravity="center"
            android:src="@drawable/ecology"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/welcome_title_tv"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_logo_img" />

        <TextView
            android:id="@+id/welcome_rule1_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/welcome_rule1_tv"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title_tv" />

        <TextView
            android:id="@+id/welcome_rule2_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/welcome_rule2_tv"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_rule1_tv" />

        <TextView
            android:id="@+id/welcome_rule3_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/welcome_rule3_tv"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_rule2_tv" />

        <TextView
            android:id="@+id/welcome_choose_level_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:gravity="center"
            android:text="@string/welcome_choose_level_tv"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_rule3_tv"
            app:layout_constraintBottom_toTopOf="@+id/btn_choose_normal_level"/>


        <TextView
            android:id="@+id/btn_choose_easy_level"
            style="@style/LevelTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="36dp"
            android:background="@color/eco_planet_blue"
            android:text="@string/welcome_easy_level_tv"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btn_choose_normal_level"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_choose_level_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_choose_normal_level" />

        <TextView
            android:id="@+id/btn_choose_normal_level"
            style="@style/LevelTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@color/eco_planet_green"
            android:text="@string/welcome_normal_level_tv"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btn_choose_hard_level"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btn_choose_easy_level"
            app:layout_constraintTop_toBottomOf="@+id/welcome_choose_level_tv"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/btn_choose_hard_level"
            style="@style/LevelTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="36dp"
            android:background="@color/eco_contour_turquoise"
            android:text="@string/welcome_hard_level_tv"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/btn_choose_normal_level"
            app:layout_constraintTop_toBottomOf="@+id/welcome_choose_level_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_choose_normal_level" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
